# altv-python-module

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  build.bat  build.sh  building.md  index.html  objects.inv  sitemap.xml
.github/workflows/: build.yml
additional-information/: index.html
api-reference/api/: index.html
api-reference/events/: index.html
cmake/: python.cmake
colshapes/: index.html
docs/: README.md  mkdocs.yml
docs/alt/: __init__.py  events.py
docs/articles/: additional-information.md  colshapes.md  events.md  index.md  intro.md  tasks.md  vectors.md  vehicle.md
docs/articles/api-reference/: api.md  events.md
docs/articles/stylesheets/: extra.css
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
events/: index.html
intro/: index.html
src/: AltObject.h  PythonResource.cpp  PythonResource.h  PythonResource.hpp  PythonRuntime.cpp  PythonRuntime.h  PythonRuntime.hpp  interval.cpp  interval.hpp  main.cpp  main.h  main.hpp  utils.cpp  utils.h  utils.hpp
src/Methods/: events.h  log.h  methods.h
src/bindings/: alt.cpp  alt.h  alt.hpp  bindings.cpp  bindings.h  bindings.hpp  events.cpp  events.h  events.hpp  helpers.h  intervals.cpp  intervals.hpp  log.cpp  log.h  log.hpp
src/classes/: classes.h  classes.hpp  clothes.cpp  clothes.h  dlcclothes.cpp  dlcprops.cpp  enum.cpp  enum.h  player.cpp  player.h  rgba.cpp  rgba.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/classes/base/: baseobject.cpp  baseobject.h  blip.cpp  checkpoint.cpp  colshape.cpp  colshape.h  entity.cpp  entity.h  player.cpp  player.h  vehicle.cpp  vehicle.h  voicechannel.cpp  voicechannel.h  worldobject.cpp  worldobject.h
src/classes/base/colshapes/: colshapecircle.cpp  colshapecircle.h  colshapecuboid.cpp  colshapecuboid.h  colshapecylinder.cpp  colshapecylinder.h  colshaperectangle.cpp  colshaperectangle.h  colshapesphere.cpp  colshapesphere.h
src/classes/data/: clothes.cpp  clothes.h  dlcclothes.cpp  dlcclothes.h  dlcprops.cpp  dlcprops.h  props.cpp  props.h  rgba.cpp  rgba.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/classes/enums/: enum.cpp  enum.h
src/classes/types/: cloth.cpp  connectioninfo.cpp  dlccloth.cpp  dlcprop.cpp  enums.cpp  enums.hpp  headblenddata.cpp  headoverlay.cpp  prop.cpp  resource.cpp  resource.hpp  rgba.cpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.h  vector3.hpp  vehiclemodelinfo.cpp  vehicleneon.cpp  vehicleneon.hpp  weapon.cpp
src/events/: Main.cpp  events.cpp  events.h  events.hpp  main.h  meta.cpp  player.cpp  player.h  resource.h  vehicle.cpp
stubs/: .gitignore  README.md  setup.cfg  setup.py
stubs/alt-stubs/: __init__.pyi
stylesheets/: extra.css
tasks/: index.html
vectors/: index.html
vehicle/: index.html
